.devcontainer/test/jinjaboard/errors/nested_include_error.yaml.j2
cards:
  - !include nested/middle.yaml.j2
